Istio/demoapp-rewrite/02-virtualservice-proxy.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: proxy
spec:
  hosts:
  - proxy
  http:
  - name: redirect
    match:
    - uri:
        prefix: "/backend"
    redirect:
      uri: /
      authority: backend
      port: 8082
  - name: default
    route:
    - destination:
        host: proxy
---
#curl http://proxy/backend  重定向到 -->  curl http://backend:8082/
#    redirect:  # 注意这里的拼接 http://<authority>:<port><uri>
#      uri: /
#      authority: backend
#      port: 8082
